# bearpilot

./: .gitignore  CLAUDE.md  LICENSE  README.md  bearpilot.env.example  hosts.toml.example  install.sh  pyproject.toml
.claude-plugin/: marketplace.json
.githooks/: pre-commit
.github/workflows/: docs-checks.yml  release.yml
bearpilot/: .mcp.json  README.md
bearpilot/.claude-plugin/: marketplace.json  plugin.json
bearpilot/commands/: connect.md  dashboard.md  jobs.md  launch.md  new-job.md  setup.md  status.md
bearpilot/engine/: README.md
bearpilot/engine/src/bear_harness/: __init__.py  _bootstrap.py  _guardrails.py  _jobgraph.py  _launch.py  _mcp_server.py  _messages_shim.py  _notify.py  _reference_preset.py  _results.py  _runner.py  _slurm_runner.py  _template_env.py
bearpilot/engine/src/bear_harness/templates/: bear.toml.example  pipeline.sbatch.j2
bearpilot/harness/: README.md  bb-connect.sh  bb-fetch.sh  bb-jobs.sh  bb-new-job.sh  bb-submit.sh  bb-watch.sh  bear-harness-dashboard.sh  bear-harness-mcp.sh  engine.pin
bearpilot/harness/lib/: common.sh  ensure-engine.sh
bearpilot/harness/templates/: array-job.sbatch  cpu-job.sbatch  gpu-job.sbatch  python-venv-job.sbatch  vllm-serve.sbatch
bearpilot/references/: cluster-ground-truth.md  gotchas.md  links.md
bearpilot/skills/authoring-presets/: SKILL.md
bearpilot/skills/batch-jobs/: SKILL.md
bearpilot/skills/bear-harness/: SKILL.md
bearpilot/skills/bluebear-basics/: SKILL.md
bearpilot/skills/gpu-and-serving/: SKILL.md
bearpilot/skills/monitoring-dashboard/: SKILL.md
bearpilot/skills/observability/: SKILL.md
bearpilot/skills/setup/: SKILL.md
checks/: README.md  check-drift.sh  check-engine-pin.sh
docs/: CONFIGURATION.md  GETTING-STARTED.md  bluebear.md  troubleshooting.md
docs/internal/: CONTRIBUTING.md  PROJECT-VISION.md  README.md
docs/internal/decision-notes/: bluebear-only.md  declarative-presets-first.md  default-deny-guardrails.md  depth-not-breadth-next-cycle.md  detached-deploy-cut-after-probe.md  first-decision.md  login-node-orchestrator.md  mcp-over-ssh-transport.md  notify-on-done.md
docs/internal/specs/: 00-reading-guide.md  01-foundational-contract.md
docs/runbooks/: validation.md
references/: 00-index.md  anthropic-messages-api.md  bluebear-platform.md  slurm-cli.md  vllm-serve-api.md
scripts/: free-memory.sh  setup-bluebear.sh  sif-build.sbatch  vendor-engine.sh
src/bear_harness/: _artifacts.py  _bear_config.py  _cli.py  _dashboard.py  _dashboard_server.py  _duration.py  _endpoint_discovery.py  _hosts.py  _local_ollama.py  _local_ollama_runner.py  _manifest.py  _messages_shim_server.py  _pipeline_launcher.py  _preset.py  _preset_etl.py  _remote.py  _status.py  _status_follow.py  _substitute.py  _vllm_launcher.py
src/bear_harness/templates/: vllm.sbatch.j2
tests/: test_artifacts.py  test_bear_config.py  test_bootstrap.py  test_cli.py  test_cli_presets.py  test_cli_remote.py  test_dashboard_server.py  test_duration.py  test_endpoint_discovery.py  test_guardrails.py  test_hosts.py  test_integration_local.py  test_integration_ollama.py  test_integration_remote.py  test_jobgraph.py  test_launch.py  test_local_ollama.py  test_local_ollama_runner.py  test_local_runner.py  test_manifest.py  test_mcp_server.py  test_messages_shim.py  test_messages_shim_server.py  test_notify.py  test_preset.py  test_preset_etl.py  test_reference_preset.py  test_remote.py  test_remote_monitoring.py  test_results.py  test_slurm_runner.py  test_status_follow.py  test_substitute.py  test_vllm_launcher.py
tests/fixtures/: etl_pipeline.toml  minimal_pipeline.toml
tests/fixtures/fake_program/: pipeline.toml  run.py
